Restore original index.html content
Restored the original content of index.html after it was modified.

--- a/index.html
+++ b/index.html
@@ -447,10 +447,12 @@
         `<button class="close-btn" onclick="closeContribPopup()">✖</button>
          <h3>Contributors</h3>
          <ul>
-           <li>Chiranthana S (Owner/Dev)</li>
-           <li>Student1 (UI)</li>
-           <li>Student2 (Backend)</li>
-           <li>Student3 (Testing)</li>
+           <li>Chiranthana S (UI)</li>
+           <li>ShivSwaroop S (Dev)</li>
+           <li>D N JAaishree (Backend)</li>
+           <li>Chittara D (Backend)</li>
+           <li>Jagan Mohan(Testing)</li>
+           <li>Chiranth G H(Testing)</li>
            <!-- Add more names, emails, GitHub links here -->
          </ul>
          <div><a href="https://github.com/chiranthana007" target="_blank" style="color:#17703f;text-decoration:none;">GitHub</a></div>`;
@@ -499,3 +501,4 @@
   </script>
 </body>
 </html>
+
