Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
          <ul>
            <li>Chiranthana S (UI)</li>
            <li>ShivSwaroop S (Dev)</li>
-           <li>D N JAaishree (Backend)</li>
+           <li>D N Jaishree (Backend)</li>
            <li>Chittara D (Backend)</li>
            <li>Jagan Mohan(Testing)</li>
            <li>Chiranth G H(Testing)</li>
@@ -501,4 +501,5 @@
   </script>
 </body>
 </html>
+
 
